--- a/.github/workflows/flutter_web_deploy.yml
+++ b/.github/workflows/flutter_web_deploy.yml
@@ -21,8 +21,14 @@ jobs:
         run: flutter pub get
       - name: Build web
         run: flutter build web
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+        
+deploy:
+  environment:
+    name: github-pages
+    url: ${{ steps.deployment.outputs.page_url }}
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
